src/objects/Addr_Verification_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for automatic address verification and normalization.</description>
    <label>Address Verification Settings</label>
    <fields>
        <fullName>Address_Verification_Endpoint__c</fullName>
        <description>Address Verification URL</description>
        <inlineHelpText>URL used for address verification.</inlineHelpText>
        <label>Address Verification URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Auth_ID__c</fullName>
        <description>Auth ID</description>
        <inlineHelpText>The Authentication ID.</inlineHelpText>
        <label>Auth ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <description>Auth Token</description>
        <inlineHelpText>The Authentication Token.</inlineHelpText>
        <label>Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Verification Service</description>
        <inlineHelpText>Salesforce class responsible for contacting the web service and verifying addresses.</inlineHelpText>
        <label>Verification Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Automatic_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Automatic Verification</description>
        <inlineHelpText>Enables automatic address verification for new addresses.</inlineHelpText>
        <label>Enable Automatic Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Address_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevent Address Overwrite Checkbox</description>
        <inlineHelpText>Prevents the Cicero API from overwriting Addresses during verification.</inlineHelpText>
        <label>Prevent Address Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reject_Ambiguous_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reject Ambiguous Addresses</description>
        <inlineHelpText>Marks ambiguous addresses as invalid, when the API returns more than one address. If left unselected, Salesforce will accept the first suggested address as the valid address.</inlineHelpText>
        <label>Reject Ambiguous Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>Callout timeout in seconds.</description>
        <inlineHelpText>Callout timeout in seconds.</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Using_SmartyStreets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether or not you are using the SmartyStreets address verification service.</description>
        <inlineHelpText>Specifies whether or not you are using the SmartyStreets address verification service.</inlineHelpText>
        <label>DEPRECATED - Using SmartyStreets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zipcode_Verification_Endpoint__c</fullName>
        <description>Zipcode Verification URL</description>
        <inlineHelpText>URL used for zip code verification.</inlineHelpText>
        <label>Zipcode Verification Endpoint</label>
        <type>Url</type>
    </fields>
</CustomObject>